# mcp-custom

./: .gitignore  README.md  pyproject.toml
src/mon_mcp/: __init__.py  _platform_linux.py  _platform_stub.py  _platform_windows.py  platform_api.py  server.py  win_api.py
src/mon_mcp/tools/: __init__.py  capture.py  clavier.py  clipboard.py  context.py  documents.py  excel.py  execution.py  fenetres.py  fichiers.py  lanceur.py  notification.py  ocr.py  recherche.py  souris.py  systeme.py  web.py  workspace.py
tests/: __init__.py  test_context.py  test_documents.py  test_excel.py  test_execution.py  test_fichiers.py  test_lanceur.py  test_recherche.py  test_server.py  test_systeme.py  test_web.py  test_workspace.py
