[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mon-mcp-custom"
version = "0.3.0"
description = "Serveur MCP custom avec capture d'ecran et controle de l'ordinateur (Windows)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mateo Baril", email = "mateo@github.com" }
]
keywords = ["mcp", "ai", "claude", "llm", "tools", "automation", "screen-capture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "pygetwindow>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mon-mcp = "mon_mcp.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src/mon_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
